Backing up key config files before upgrade to next stable release

--- a/.config/gtk-2.0/gtkfilechooser.ini
+++ b/.config/gtk-2.0/gtkfilechooser.ini
@@ -1,11 +1,11 @@
 [Filechooser Settings]
-LocationMode=path-bar
+LocationMode=filename-entry
 ShowHidden=true
 ShowSizeColumn=true
-GeometryX=163
-GeometryY=134
-GeometryWidth=1594
-GeometryHeight=812
-SortColumn=modified
+GeometryX=3846
+GeometryY=98
+GeometryWidth=1914
+GeometryHeight=980
+SortColumn=name
 SortOrder=ascending
 StartupMode=recent
