--- a/.config/lxsession/Lubuntu/desktop.conf
+++ b/.config/lxsession/Lubuntu/desktop.conf
@@ -5,7 +5,7 @@ windows_manager/extras=
 panel/command=lxpanel
 panel/session=Lubuntu
 screensaver/command=
-power_manager/command=auto
+power_manager/command=xfce4-power-manager
 file_manager/command=pcmanfm
 file_manager/session=lubuntu
 file_manager/extras=
@@ -54,7 +54,7 @@ tasks/command=lxtask
 lock_manager/command=lxlock
 
 [State]
-laptop_mode=yes
+laptop_mode=no
 guess_default=true
 
 [Dbus]
@@ -89,20 +89,20 @@ menu_prefix=lxde-
 [GTK]
 sNet/ThemeName=Redmond
 sNet/IconThemeName=Classic95
-sGtk/FontName=Ubuntu 24
+sGtk/FontName=Ubuntu 28
 iGtk/ToolbarStyle=3
 iGtk/ButtonImages=1
 iGtk/MenuImages=1
-iGtk/CursorThemeSize=108
+iGtk/CursorThemeSize=18
 iXft/Antialias=1
 iXft/Hinting=1
 sXft/HintStyle=hintslight
 sXft/RGBA=rgb
-sGtk/CursorThemeName=Vanilla-DMZ-AA
+sGtk/CursorThemeName=Large Mouse Cursors
 sGtk/ColorScheme=
 iGtk/ToolbarIconSize=3
-iNet/EnableEventSounds=1
-iNet/EnableInputFeedbackSounds=1
+iNet/EnableEventSounds=0
+iNet/EnableInputFeedbackSounds=0
 
 [Mouse]
 AccFactor=20
