--- a/.config/pcmanfm/lubuntu/desktop-items-0.conf
+++ b/.config/pcmanfm/lubuntu/desktop-items-0.conf
@@ -1,16 +1,16 @@
 [*]
-wallpaper_mode=center
+wallpaper_mode=stretch
 wallpaper_common=1
 wallpapers_configured=1
-wallpaper0=/usr/share/lubuntu/wallpapers/lubuntu-default-wallpaper.png
-wallpaper=/home/friendlysicoach/Pictures/w/m82_hubble_1080.jpg
-desktop_bg=#2e4060
+wallpaper0=/media/macreu_slave/Android-x86/Pictures/v/PIC3.PNG
+wallpaper=/home/macreu_slave/Pictures/v/PIC3.PNG
+desktop_bg=#000000
 desktop_fg=#ffffff
 desktop_shadow=#000000
-desktop_font=Ubuntu 26
+desktop_font=Ubuntu 24
 show_wm_menu=0
-sort=mtime;ascending;
-show_documents=1
-show_trash=1
-show_mounts=1
+sort=name;ascending;
+show_documents=0
+show_trash=0
+show_mounts=0
 
