--- a/.config/pcmanfm/lubuntu/pcmanfm.conf
+++ b/.config/pcmanfm/lubuntu/pcmanfm.conf
@@ -14,10 +14,10 @@ x-content/bootable-media=pcmanfm
 [ui]
 always_show_tabs=0
 max_tab_chars=32
-win_width=1594
-win_height=812
+win_width=1920
+win_height=986
 maximized=1
-splitter_pos=411
+splitter_pos=406
 media_in_new_tab=0
 desktop_folder_new_win=0
 change_tab_on_drop=1
@@ -25,8 +25,9 @@ close_on_unmount=1
 focus_previous=0
 side_pane_mode=places
 view_mode=icon
-show_hidden=1
-sort=name;ascending;
+show_hidden=0
+sort=mtime;descending;
+columns=name:200;desc:462;size:267;mtime;
 toolbar=newtab;navigation;home;
 show_statusbar=1
 pathbar_mode_buttons=0
