--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,15 +1,15 @@
 [Settings]
 gtk-theme-name=Redmond
 gtk-icon-theme-name=Classic95
-gtk-font-name=Ubuntu 24
-gtk-cursor-theme-name=Vanilla-DMZ-AA
-gtk-cursor-theme-size=108
+gtk-font-name=Ubuntu 28
+gtk-cursor-theme-name=Large Mouse Cursors
+gtk-cursor-theme-size=96
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
 gtk-menu-images=1
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=1
+gtk-enable-event-sounds=0
+gtk-enable-input-feedback-sounds=0
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
