Creating test configs for blank canvas lxde install

--- a/.config/gtk-2.0/gtkfilechooser.ini
+++ b/.config/gtk-2.0/gtkfilechooser.ini
@@ -2,8 +2,10 @@
 LocationMode=filename-entry
 ShowHidden=true
 ShowSizeColumn=true
-GeometryX=3846
-GeometryY=98
+#GeometryX=3846
+#GeometryY=98
+GeometryX=3
+GeometryY=49
 GeometryWidth=1914
 GeometryHeight=980
 SortColumn=name
