--- a/.config/pcmanfm/LXDE/desktop-items-1.conf
+++ b/.config/pcmanfm/LXDE/desktop-items-1.conf
@@ -1,14 +1,26 @@
 [*]
 wallpaper_mode=crop
 wallpaper_common=1
-wallpaper=/home/macreu_slave/Pictures/v/blazblue-cross-tag-battle-cover-art-42.jpg
+wallpaper=$HOME/Pictures/v/blazblue-cross-tag-battle-cover-art-42.jpg
 desktop_bg=#000000
 desktop_fg=#ffffff
 desktop_shadow=#000000
 desktop_font=SFNS Display 20
 show_wm_menu=0
-sort=mtime;ascending;
+sort=name;ascending;
 show_documents=0
-show_trash=1
+show_trash=0
 show_mounts=0
+
+[xscreensaver-5.44.tar.gz]
+x=58
+y=370
+
+[xscreensaver-5.44]
+x=73
+y=732
+
+[MP2_Item_Loss]
+x=11
+y=9
 
