--- a/.config/pcmanfm/lubuntu/desktop-items-1.conf
+++ b/.config/pcmanfm/lubuntu/desktop-items-1.conf
@@ -2,8 +2,8 @@
 wallpaper_mode=stretch
 wallpaper_common=1
 wallpapers_configured=1
-wallpaper0=/home/macreu_slave/Pictures/Windows-7-RTM-Default-Wallpaper-the-Design-Story-2.jpg
-wallpaper=/home/macreu_slave/Pictures/v/blazblue-cross-tag-battle-cover-art-42.jpg
+wallpaper0=$HOME/Pictures/Windows-7-RTM-Default-Wallpaper-the-Design-Story-2.jpg
+wallpaper=$HOME/Pictures/v/blazblue-cross-tag-battle-cover-art-42.jpg
 desktop_bg=#2e4060
 desktop_fg=#ffffff
 desktop_shadow=#000000
