--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Redmond
 gtk-icon-theme-name=Classic95
-gtk-font-name=Ubuntu 28
+gtk-font-name=SFNS Text 28
 gtk-cursor-theme-name=Large Mouse Cursors
 gtk-cursor-theme-size=96
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
