--- a/.config/pavucontrol.ini
+++ b/.config/pavucontrol.ini
@@ -1,7 +1,8 @@
 [window]
-width=1594
-height=812
+width=1920
+height=995
 sinkInputType=0
 sourceOutputType=1
 sinkType=0
 sourceType=1
+showVolumeMeters=1
