--- a/.config/pcmanfm/LXDE/desktop-items-0.conf
+++ b/.config/pcmanfm/LXDE/desktop-items-0.conf
@@ -2,7 +2,7 @@
 wallpaper_mode=crop
 wallpaper_common=0
 wallpapers_configured=2
-wallpaper0=/home/macreu_slave/Pictures/v/PIC3.PNG
+wallpaper0=$HOME/Pictures/v/PIC3.PNG
 desktop_bg=#000000
 desktop_fg=#ffffff
 desktop_shadow=#000000
@@ -10,6 +10,6 @@ desktop_font=SFNS Display 20
 show_wm_menu=0
 sort=mtime;ascending;
 show_documents=0
-show_trash=1
+show_trash=0
 show_mounts=0
 
