--- a/.config/pcmanfm/default/pcmanfm.conf
+++ b/.config/pcmanfm/default/pcmanfm.conf
@@ -6,13 +6,16 @@ mount_on_startup=1
 mount_removable=1
 autorun=1
 
+[autorun]
+x-content/image-dcf=pcmanfm
+
 [ui]
 always_show_tabs=0
 max_tab_chars=32
-win_width=801
-win_height=405
+win_width=1918
+win_height=988
 maximized=1
-splitter_pos=336
+splitter_pos=486
 media_in_new_tab=0
 desktop_folder_new_win=0
 change_tab_on_drop=1
@@ -22,6 +25,7 @@ side_pane_mode=places
 view_mode=icon
 show_hidden=1
 sort=name;ascending;
+columns=name:200;desc:437;size:207;mtime;
 toolbar=newtab;navigation;home;
 show_statusbar=1
 pathbar_mode_buttons=0
