--- a/.config/pcmanfm/lubuntu/desktop-items-0.conf
+++ b/.config/pcmanfm/lubuntu/desktop-items-0.conf
@@ -2,8 +2,8 @@
 wallpaper_mode=stretch
 wallpaper_common=1
 wallpapers_configured=1
-wallpaper0=/media/macreu_slave/Android-x86/Pictures/v/PIC3.PNG
-wallpaper=/home/macreu_slave/Pictures/v/PIC3.PNG
+wallpaper0=$HOME/Pictures/v/PIC3.PNG
+wallpaper=$HOME/Pictures/v/PIC3.PNG
 desktop_bg=#000000
 desktop_fg=#ffffff
 desktop_shadow=#000000
