--- a/.config/pcmanfm/lubuntu/desktop-items-2.conf
+++ b/.config/pcmanfm/lubuntu/desktop-items-2.conf
@@ -3,7 +3,7 @@ wallpaper_mode=crop
 wallpaper_common=1
 wallpapers_configured=1
 wallpaper0=/usr/share/lubuntu/wallpapers/lubuntu-default-wallpaper.png
-wallpaper=/home/macreu_slave/Pictures/v/00l1d110h4051.jpg
+wallpaper=$HOME/Pictures/v/00l1d110h4051.jpg
 desktop_bg=#2e4060
 desktop_fg=#ffffff
 desktop_shadow=#000000
